final mid_report

--- a/get_data_insta.ipynb
+++ b/get_data_insta.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "classified-forestry",
+   "id": "partial-bangladesh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "entire-resolution",
+   "id": "cosmetic-tribe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,17 +31,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "characteristic-criminal",
+   "id": "thermal-event",
    "metadata": {},
    "source": [
-    "\n",
-    "[ubuntu에 chrome-driver 설치](https://somjang.tistory.com/entry/Ubuntu-Ubuntu-%EC%84%9C%EB%B2%84%EC%97%90-Selenium-%EC%84%A4%EC%B9%98%ED%95%98%EA%B3%A0-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0)"
+    "[이 자료](https://somjang.tistory.com/entry/Ubuntu-Ubuntu-%EC%84%9C%EB%B2%84%EC%97%90-Selenium-%EC%84%A4%EC%B9%98%ED%95%98%EA%B3%A0-%EC%82%AC%EC%9A%A9%ED%95%98%EA%B8%B0)를 참고하여 ubuntu 환경에도 chrome 및 chrome driver를 설치하여 크롤링 할 수 있습니다. 각자 사용 환경에 따른 크롤링 설정이 다르므로 유의하시기 바랍니다. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "serious-choir",
+   "id": "veterinary-difficulty",
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "biblical-nursery",
+   "id": "common-register",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "saving-pontiac",
+   "id": "accurate-simple",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "quick-monroe",
+   "id": "south-glasgow",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "greatest-honolulu",
+   "id": "stylish-interstate",
    "metadata": {},
    "outputs": [],
    "source": [
